--- a/openvpn/01-openvpn-basic/etc/openvpn/server.conf
+++ b/openvpn/01-openvpn-basic/etc/openvpn/server.conf
@@ -257,6 +257,7 @@ tls-crypt /etc/openvpn/server/myvpn_shared_secret_key.tlsauth  #(增强安全性
 # negotiate AES-256-GCM in TLS mode.
 # See also the ncp-cipher option in the manpage
 cipher AES-256-CBC
+tls-version-min 1.2  # 设置 tls 的最低版本为 1.2 (因为其最低版本默认值为 1)
 
 # Enable compression on the VPN link and push the
 # option to the client (v2.4+ only, for earlier
