--- a/mysql_mariadb/mysql_02_basic/replication.dir/001-one-master-to-one-slave-simplest/master/etc/my.cnf
+++ b/mysql_mariadb/mysql_02_basic/replication.dir/001-one-master-to-one-slave-simplest/master/etc/my.cnf
@@ -2,6 +2,8 @@
 # http://dev.mysql.com/doc/refman/5.7/en/server-configuration-defaults.html
 
 [mysqld]
+log-bin=master-bin
+server-id=100   # server-id 范围: 1 and (2^32)−1
 #
 # Remove leading # and set to the amount of RAM for the most important data
 # cache in MySQL. Start at 70% of total RAM for dedicated server, else 10%.
