--- a/mysql_mariadb/mysql_02_basic/replication.dir/001-one-master-to-one-slave-simplest/slave/etc/my.cnf
+++ b/mysql_mariadb/mysql_02_basic/replication.dir/001-one-master-to-one-slave-simplest/slave/etc/my.cnf
@@ -2,6 +2,8 @@
 # http://dev.mysql.com/doc/refman/5.7/en/server-configuration-defaults.html
 
 [mysqld]
+log-bin=slave-bin  #启用 slave 的 bin log, 该行配置非必须, 但对于 data backups 和 crash recovery 等 处理很有用,很方便
+server-id=101
 #
 # Remove leading # and set to the amount of RAM for the most important data
 # cache in MySQL. Start at 70% of total RAM for dedicated server, else 10%.
