--- a/mysql_mariadb/mysql_02_basic/replication.dir/005-gtid-utf8mb4-rpm-mha4mysql/slave02/etc/my.cnf
+++ b/mysql_mariadb/mysql_02_basic/replication.dir/005-gtid-utf8mb4-rpm-mha4mysql/slave02/etc/my.cnf
@@ -22,6 +22,17 @@ server-id=102   # server-id 范围: 1 and (232)−1
 gtid_mode=ON    # ON: Both new and replicated transactions must be GTID transactions.
 enforce-gtid-consistency=true  # ON: no transaction is allowed to violate GTID consistency.
 
+# 启用 skip-name-resolve 不仅能优化性能(特别是在 DNS 很慢或有许多hosts时),
+# 还能 解决 本示例中 权限的问题, 因为本示例中 用户都是基于 ip 地址创建并授权的,
+# 如 'repluser'@'192.168.175.102', 如果不启用 skip-name-resolve,
+# 则 在某时候 可能会去 检查账号 'repluser'@'slave02' 的授权, 因为本示例未对 'repluser'@'slave02'
+# 授权, 导致 因权限拒绝 而 访问失败, 从而无法正常实现 replication 功能.
+#   --skip-name-resolve:  Don't resolve hostnames. All hostnames are IP's or 'localhost'.
+#   https://dev.mysql.com/doc/refman/5.7/en/server-options.html#option_mysqld_skip-name-resolve
+#   https://dev.mysql.com/doc/refman/5.7/en/host-cache.html
+skip-name-resolve=ON
+
+
 # 关于 系统变量 gtid_mode 和 enforce-gtid-consistency 的信息, 见:
 #  https://dev.mysql.com/doc/refman/5.7/en/replication-options-gtids.html#sysvar_gtid_mode
 #  https://dev.mysql.com/doc/refman/5.7/en/replication-options-gtids.html#sysvar_enforce_gtid_consistency
