--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/phpfpm.fastcgi.demo01.com.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/phpfpm.fastcgi.demo01.com.conf
@@ -23,6 +23,8 @@ server {
         root           /web/app/phpfpm.fastcgi.demo01.com;
         fastcgi_pass   192.168.175.101:9000;
         fastcgi_index  index.php;
+        #// The variable $document_root is equal to the value of the root directive and the variable $fastcgi_script_name is equal to the request URI
+        #// http://nginx.org/en/docs/http/request_processing.html
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         include        fastcgi_params;  #// 包含文件 /app/nginx/conf/fastcgi_params 中的设置
     }
