--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/servername.match.demo.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/servername.match.demo.conf
@@ -2,6 +2,12 @@
 #// http://nginx.org/en/docs/http/request_processing.html
 
 
+
+#// Server names 使用 server_name 指令 来定义 并 确定 哪个 server block 被 用于处理 a given request.
+#// See also “How nginx processes a request”.
+#// Server names 可以使用 exact names, wildcard names, 或 regular expressions 来定义
+
+
 #// When searching for a virtual server by name, if name matches more than one of the specified variants,
 #// e.g. both wildcard name and regular expression match,
 #// the first matching variant will be chosen, in the following order of precedence:
