--- a/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/servername.match.demo.conf
+++ b/nginx/nginx02_server_basic/nginx7server/app/nginx/sites-available/servername.match.demo.conf
@@ -63,7 +63,7 @@
 #//  nginx使用的正则表达式兼容与perl语言使用的正则表达式(PCRE),为了使用正则表达式，servername必须以波浪符号“~”开头。
 #//  如： server_name  ~^www\d+\.example\.net$;
 #//  否则，会被当做精确名(exact name)对待,或者，如果包含星号"*",则被当做通配符名。
-#//  别让了设置开始锚点和结束锚点(即“^” and “$” anchors), 它们不是语法必须的，但确实语义必须的。
+#//  别忘了设置开始锚点和结束锚点(即“^” and “$” anchors), 它们不是语法必须的，但确是语义(逻辑)必须的。
 #//  同时注意域名之间的点应该使用反斜线(backslash)进行转义。如果正则表达式包含了字母“{” and “}”
 #//  (即开始大括号和结束大括号), 则整个正则表达式应该被引号引起来,如：
 #//  server_name  "~^(?<name>\w\d{1,3}+)\.example\.net$";
@@ -84,6 +84,19 @@
 #//  ?<name> Perl 5.10 compatible syntax, supported since PCRE-7.0
 #//  ?'name' Perl 5.10 compatible syntax, supported since PCRE-7.0
 #//  ?P<name>  Python compatible syntax, supported since PCRE-4.0
+
+#// If nginx fails to start and displays the error message:
+#//  pcre_compile() failed: unrecognized character after (?< in ...
+#//   this means that the PCRE library is old and the syntax “?P<name>”
+#//   should be tried instead. The captures can also be used in digital form:
+#//   server {
+#//       server_name   ~^(www\.)?(.+)$;
+#//
+#//       location / {
+#//           root   /sites/$2;
+#//       }
+#//   }
+#// However, such usage should be limited to simple cases (like the above), since the digital references can easily be overwritten.
 
 
 #// Miscellaneous names
