--- a/ntp_chrony_basic/ntp7server/etc/chrony.conf
+++ b/ntp_chrony_basic/ntp7server/etc/chrony.conf
@@ -9,11 +9,8 @@
 # https://help.aliyun.com/document_detail/92704.html
 server ntp1.aliyun.com iburst
 server ntp2.aliyun.com iburst
-server ntp3.aliyun.com iburst
-server ntp4.aliyun.com iburst
-server ntp5.aliyun.com iburst
-server ntp6.aliyun.com iburst
-server ntp7.aliyun.com iburst
+server 0.cn.pool.ntp.org iburst
+server 1.cn.pool.ntp.org iburst
 
 # Record the rate at which the system clock gains/losses time.
 driftfile /var/lib/chrony/drift
